# test-api-gateway

./: Cargo.toml  Dockerfile
configuration/: base.yaml  local.yaml  production.yaml
src/: configuration.rs  constants.rs  external_services_client.rs  lib.rs  main.rs  startup.rs  utils.rs
src/kafka/: mod.rs
src/kafka/consumers/: base_consumer.rs  internal_inventory_item_changed_consumer.rs  locator_quote_response_consumer.rs  mod.rs  notification_consumer.rs  provider_locate_symbol_info_consumer.rs
src/models/: mod.rs
src/models/camel_case/: firm_provider_setting_request.rs  firm_setting_request.rs  grouped_notification.rs  internal_inventory_item.rs  locate_model.rs  locate_request_model.rs  locator_quote_response.rs  mod.rs  provider_settings_extended.rs  provider_symbol_locates_info_with_discounted_price.rs  quote_source_info.rs
src/models/enums/: asset_type.rs  creating_type.rs  internal_inventory_item_state.rs  mod.rs  notification_type.rs  quote_response_status_enum.rs
src/models/pascal_case/: grouped_notification_kafka.rs  internal_inventory_item.rs  mod.rs  provider_symbol_locates_info.rs  quote_response.rs  quote_source_info.rs
src/routes/: mod.rs
src/routes/application/: clean_data.rs  mod.rs  running_env.rs
src/routes/auth/: current_user_roles.rs  mod.rs
src/routes/default_symbol_settings/: get.rs  mod.rs  put.rs
src/routes/sse/: mod.rs  (+1 more)
src/services/: locate_requests_cache.rs  locates_cache.rs  message_handler.rs  mod.rs  notification_service.rs  provider_setting_cache.rs  time_service.rs
tests/api/: application_clean_data.rs  application_runnin_env.rs  auth_current_user_roles.rs  default_symbol_settings.rs  firm_settings.rs  helpers.rs  main.rs  provider_settings.rs
(+17 files in other folders)
