[package]
name = "locator_admin_rust"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "locator_admin_rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4"
actix-web-lab = "0.19"
anyhow = "1"
base64 = "0.21"
bytestring = "1"
config = "0.13"
htmlescape = "0.3"
kafka = "0.10"
rand = { version = "0.8", features = ["std_rng"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
serde_json = "1"
serde_path_to_error = "0.1"
thiserror = "1"
time = { version = "0.3", features = ["macros", "serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-util = "0.7.8"
tracing-actix-web = "0.7"
tracing = { version = "0.1", features = ["log"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
unicode-segmentation = "1"
urlencoding = "2"
uuid = { version = "1.0.0", features = ["v4", "serde"] }
validator = "0.16"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls", "stream"]


[dev-dependencies]
once_cell = "1"
claim = "0.5"
# We are not using fake >= 2.4 because it relies on rand 0.8
# which has been recently released and it is not yet used by
# quickcheck (solved in its upcoming 1.0 release!)
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
linkify = "0.9"
serde_urlencoded = "0.7.1"
